--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,15 +10,15 @@
             "args": [
                 "-g",
                 "${workspaceFolder}/main.cpp",
-                "${workspaceFolder}/Mesh.cpp",
-                "${workspaceFolder}/Shader.cpp",
-                "${workspaceFolder}/GLWindow.cpp",
-                "${workspaceFolder}/Camera.cpp",
-                "${workspaceFolder}/Texture.cpp",
-                "${workspaceFolder}/Light.cpp",
-                "${workspaceFolder}/DirectionalLight.cpp",
-                "${workspaceFolder}/PointLight.cpp",
-                "${workspaceFolder}/Material.cpp",
+                "${workspaceFolder}/../OpenGLCommon/Mesh.cpp",
+                "${workspaceFolder}/../OpenGLCommon/Shader.cpp",
+                "${workspaceFolder}/../OpenGLCommon/GLWindow.cpp",
+                "${workspaceFolder}/../OpenGLCommon/Camera.cpp",
+                "${workspaceFolder}/../OpenGLCommon/Texture.cpp",
+                "${workspaceFolder}/../OpenGLCommon/Light.cpp",
+                "${workspaceFolder}/../OpenGLCommon/DirectionalLight.cpp",
+                "${workspaceFolder}/../OpenGLCommon/PointLight.cpp",
+                "${workspaceFolder}/../OpenGLCommon/Material.cpp",
                 "-o",
                 "${fileDirname}/main.exe",
                 //"${fileDirname}/${fileBasenameNoExtension}",
